--- a/vignettes/Figure-2-hashing.Rmd
+++ b/vignettes/Figure-2-hashing.Rmd
@@ -24,6 +24,8 @@ library(dittoSeq)
 library(ggpubr)
 library(gridExtra)
 library(scater)
+library(grid)
+library(dplyr)
 
 ```
 
@@ -74,7 +76,7 @@ do.call(grid.arrange,c(plot,nrow=1))
 # plot<-plot_hashtag(df,ylim=c(0,2000))
 # do.call(grid.arrange,c(plot,nrow=1))
 
-load("/data/scratch/nextflow/ccrcc_out/demuxSNP_e/e_final_sce.rdata")
+load("/data/projects/demuxSNP/nextflow/ccrcc_out/demuxSNP_h/h_final_sce.rdata")
 df_qual<-perCellQCMetrics(sce)
 sce$qual<-df_qual$sum>1000 | df_qual$detected>750
 table(sce$qual)
@@ -91,7 +93,74 @@ truth_low<-sce$truth
 table(sce$truth)
 ````
 
+````{r}
+load("/data/projects/demuxSNP/nextflow/ccrcc_out/demuxSNP_h/h_final_sce.rdata")
+train_cells<-sce$train
+predict_cells<-!sce$train
+k=10
+d=200
+   train <- counts(altExp(sce, "SNP"))[, train_cells == TRUE]
+    train[train == -1] <- 0
+    labels <- sce$labels[train_cells == TRUE]
+    labels <- droplevels(labels)
+    colnames(train) <- labels
+    combs <- expand.grid(levels(labels), levels(labels))
+    combs <- combs[combs$Var1 != combs$Var2, ]
+    p <- combn(unique(combs$Var1), 2)
+    combs_joined <- paste(p[1, ], p[2, ])
+    all <- matrix(data = NA, nrow = dim(altExp(sce, "SNP"))[1], 
+        ncol = d * length(combs_joined))
+    for (i in seq_along(combs_joined)) {
+        l1 <- as.character(combs$Var1[i])
+        l2 <- as.character(combs$Var2[i])
+        d1 <- train[, labels == l1]
+        d2 <- train[, labels == l2]
+        s1 <- sample(seq_len(dim(d1)[2]), d, replace = TRUE)
+        s2 <- sample(seq_len(dim(d2)[2]), d, replace = TRUE)
+        doubs <- d1[, s1] == 1 | d2[, s2] == 1
+        doubs <- doubs * 1
+        doubs[doubs == 0] <- c(0)
+        all[, c(1 + (i - 1) * d):c(d + (i - 1) * d)] <- doubs
+        colnames(all) <- rep("Doublet", dim(all)[2])
+    }
+    train_all <- cbind(train, all)
+    pred <- as.data.frame(counts(altExp(sce, "SNP"))[, predict_cells == 
+        TRUE])
+    pred[pred == -1] <- 0
+    y = as.integer(as.factor(colnames(train_all)))
+    result_kern <- KernelKnn::KernelKnn(data = t(train_all), TEST_data = t(pred), 
+        y = y, k = k, Levels = seq_along(levels(as.factor(colnames(train_all)))), regression = F, method = "jaccard_coefficient")
+    ID <- apply(result_kern, 1, which.max)
+    z <- levels(as.factor(colnames(train_all)))
+    names(z)<-seq_along(z)
+    ID<-recode(as.character(ID), !!!z)
+#> [1] "Apple"  "Banana" "Banana" "Apple"
 
+    sce$knn_jacc <- as.character(sce$labels)
+    sce$knn_jacc[predict_cells == TRUE] <- as.character(as.factor(ID))
+    sce$knn_jacc <- as.factor(sce$knn_jacc)
+  table(sce$knn_jacc,sce$truth)
+  
+  adjustedRandIndex(sce$knn,sce$truth)
+  adjustedRandIndex(sce$knn_jacc,sce$truth)
+  
+  snp<-altExp(sce,"SNP")
+  logcounts(snp)<-counts(snp)
+  snp<-scater::runPCA(snp)
+  snp$class<-sce$truth
+  snp$classdoub<-sce$truthalldoub
+  snp$knn<-sce$knn_jacc
+  snp<-runTSNE(snp)
+  dittoDimPlot(snp,reduction.use="TSNE","class")
+    dittoDimPlot(snp,reduction.use="TSNE","classdoub")
+  dittoDimPlot(snp,reduction.use="TSNE","knn")
+    dittoDimPlot(snp,reduction.use="PCA","knn")
+    
+    sce$truth<-gsub("K","Hashtag",sce$truth)
+    
+    sum(sce$knn==sce$truth)/length(sce$truth)
+    sum(sce$knn_jacc==sce$truth)/length(sce$truth)
+````
 
 ````{r eval=FALSE}
 methods<-c("htodemux","bff_raw","bff_cluster","dropletutils","multiseq","gmm_demux")
@@ -169,6 +238,7 @@ grid.arrange(grobs=plot,nrow=1,top=textGrob("High quality hashing logcounts", gp
 library(zellkonverter)
 library(DropletUtils)
 sce$truth<-gsub("K","Hashtag",sce$truth)
+sce$truthalldoub<-gsub("K","Hashtag",sce$truthalldoub)
 counts<-as.matrix(hto_high)
 rna=counts(sce)[unique(rownames(sce)),]
 colnames(rna)<-seq_len(dim(rna)[2])
@@ -317,7 +387,7 @@ names(total_acc)<-methods
 df_methods_high<-data.frame(method=methods,pc_neg=total_nnegpc,accuracy=total_acc)
 df_methods_high$data="high"
 df_methods<-rbind(df_methods_high,df_methods_low)
-ggbarplot(df_methods,x='method',y='accuracy',fill = 'data',position=position_dodge(),color = 'data',title='Overall Classificaton Accuracy between methods and high/low quality hashing',xlab='method',ylab='Overall CLassification Accuracy')
+ggbarplot(df_methods,x='method',y='accuracy',fill = 'data',position=position_dodge(),color = 'data',title='Overall Classificaton Accuracy between methods and high/low quality hashing',xlab='method',ylab='Overall CLassification Accuracy')+ylim(0,1)
 ggbarplot(df_methods,x='method',y='pc_neg',fill = 'data',position=position_dodge(),color = 'data' ,title='% Negatives assigned between methods and high/low quality hashing',xlab='method',ylab='% hashing negatives')
 ````
 
