--- a/vignettes/Supp_figures.Rmd
+++ b/vignettes/Supp_figures.Rmd
@@ -56,4 +56,259 @@ for (i in seq_along(dvec)) {
 plot(dvec,acc)
 ````
 
+````{r}
 
+library(demuxSNPpaperfigures)
+library(dittoSeq)
+library(ggpubr)
+library(gridExtra)
+library(tictoc)
+library(SingleCellExperiment)
+library(Matrix)
+library(tidyverse)
+library(demuxSNP)
+
+
+#args <- commandArgs(trailingOnly = TRUE)
+tenx_path<-c('/data/projects/yufei/210827_10X_KW9275_bcl/cellranger-6.1.1/GRCh38/BRI-1348/outs/filtered_feature_bc_matrix')
+barcodes_path<-c("/data/projects/demuxSNP/nextflow/ccrcc_out/barcodes_merged_e.tsv")
+lookup_path<-c("/data/projects/demuxSNP/nextflow/ccrcc_out/lookup_table_doublets_pbmc_e_25pc.tsv")
+key<-c("e")
+
+matrix<-readMM(paste(tenx_path,"/matrix.mtx.gz",sep=""))
+barcodes<-read.table(paste(tenx_path,"/barcodes.tsv.gz",sep=""))
+features<-read.table(paste(tenx_path, "/features.tsv.gz",sep=""))
+
+rownames(matrix)<-features$V2
+colnames(matrix)<-barcodes$V1
+
+rna<-matrix[features$V3=="Gene",]
+hto<-matrix[grep("Hashtag",features$V1),]
+
+sub_barcodes<-read.table(barcodes_path)
+lookup<-read_tsv(lookup_path)
+
+rna<-rna[,substr(colnames(rna),start=1,stop = 16) %in% substr(sub_barcodes$V1, start=1,stop=16)]
+hto<-hto[,substr(colnames(hto),start=1,stop = 16) %in% substr(sub_barcodes$V1, start=1,stop=16)]
+
+
+new_bc<-sub_barcodes$V1[match(substr(colnames(rna),1,16),substr(sub_barcodes$V1,1,16))]
+colnames(rna)<-new_bc
+colnames(hto)<-new_bc
+rna1<-rna[,lookup$original]
+rna2<-rna[,lookup$replacement]
+print(dim(rna1));print(dim(rna2))
+rna_doub<-rna2+rna1
+rna_sing<-rna[,!c(new_bc %in% union(lookup$original,lookup$replacement))]
+rna_full<-cbind(rna_sing,rna_doub)
+
+hto1<-hto[,lookup$original]
+hto2<-hto[,lookup$replacement]
+print(dim(hto1));print(dim(hto2))
+hto_doub<-hto2+hto1
+hto_sing<-hto[,!c(new_bc %in% union(lookup$original,lookup$replacement))]
+hto_full<-cbind(hto_sing,hto_doub)
+
+sce<-SingleCellExperiment(list(counts=rna_full))
+hto_sce<-SingleCellExperiment(list(counts=hto_full))
+altExp(sce,"HTO")<-hto_sce
+mainExpName(sce)<-"RNA"
+head(colnames(sce))
+
+sce$new_bc<-sub_barcodes$V1[match(substr(colnames(sce),1,16),substr(sub_barcodes$V1,1,16))]
+
+sce$truth<-substr(sce$new_bc,start=18,stop=19)
+sce$truth[sce$new_bc %in% lookup$replacement[substr(lookup$original,start=18,stop=19)!=substr(lookup$replacement,start=18,stop=19)]]<-"Doublet"
+table(sce$truth)
+
+sce$truthalldoub<-substr(sce$new_bc,start=18,stop=19)
+sce$truthalldoub[sce$new_bc %in% lookup$replacement]<-"Doublet"
+table(sce$truthalldoub)
+
+rownames(hto)
+sig<-matrix(0,dim(hto)[1],dim(hto)[2])
+colnames(sig)<-colnames(hto)
+t<-substr(new_bc,18,19)
+truth<-gsub("K","Hashtag",t)
+for (i in seq_along(rownames(hto))) {
+  hashtag<-rownames(hto)[i]
+  sig[i,truth==hashtag]<-1
+}
+
+sig1<-sig[,lookup$original]
+sig2<-sig[,lookup$replacement]
+print(dim(sig1));print(dim(sig2))
+sig_doub<-sig2+sig1
+sig_sing<-sig[,!c(new_bc %in% union(lookup$original,lookup$replacement))]
+sig_full<-cbind(sig_sing,sig_doub)
+
+sig_full<-sig_full>0
+hto2<-hto_full
+shift<-c(2,1,1,1,10,1)
+hto_shift<-shift*hto_full
+hto2[sig_full]<-round(hto_shift[sig_full])
+
+class(hto2)
+hto2<-as.matrix(hto2)
+plot_hashtag(data.frame(t(log(hto2+1))))
+hto_align<-SingleCellExperiment(list(counts=hto2))
+altExp(sce,"HTO_align")<-hto_align
+
+#plot<-plot_hashtag(data.frame(t(log(hto2+1))))
+grid.arrange(grobs=plot,nrow=1,top=textGrob("Low quality hashing logcounts", gp=gpar(fontsize=20,font=8)))
+
+````
+
+
+````{r}
+
+hto_high<-counts(altExp(sce,"HTO_align"))
+hto_low<-counts(altExp(sce,"HTO"))
+library(zellkonverter)
+library(DropletUtils)
+sce$truth<-gsub("K","Hashtag",sce$truth)
+sce$truthalldoub<-gsub("K","Hashtag",sce$truthalldoub)
+counts<-as.matrix(hto_high)
+rna=counts(sce)[unique(rownames(sce)),]
+colnames(rna)<-seq_len(dim(rna)[2])
+write10xCounts("rna.h5",x=rna,type="HDF5",overwrite=TRUE)
+h5File <- 'rna.h5'
+DropletUtils::read10xCounts(h5File)
+methods<-c("htodemux","bff_raw","bff_cluster","dropletutils","multiseq","gmm_demux","demuxmix")
+library(cellhashR)
+colnames(counts)<-seq_len(dim(counts)[2])
+chr<-GenerateCellHashingCalls(counts,
+                              methods=methods,
+                              doTSNE = FALSE,
+                              rawFeatureMatrixH5 = h5File)
+
+chr<-chr[order(as.numeric(chr$cellbarcode)),]
+chr$gt<-sce$truth
+
+counts_low<-as.matrix(hto_low)
+colnames(counts_low)<-seq_len(dim(counts_low)[2])
+chr_low<-GenerateCellHashingCalls(counts_low,
+                              methods=methods,
+                              doTSNE = FALSE,
+                              rawFeatureMatrixH5 = h5File)
+
+chr_low<-chr_low[order(as.numeric(chr_low$cellbarcode)),]
+chr_low$gt<-sce$truth
+
+library(caret)
+methods=c("htodemux","bff_cluster","bff_raw","gmm_demux","demuxmix")
+df_full<-data.frame()
+for (i in seq_along(methods)) {
+  m<-methods[i]
+  data_ch=chr[[m]]
+  ref_ch=chr[['gt']]
+  data_fac<-factor(data_ch,union(data_ch,ref_ch))
+  ref_fac<-factor(ref_ch,union(data_ch,ref_ch))
+  cf<-confusionMatrix(data=data_fac,reference=ref_fac)
+  recall<-cf$byClass[,6]
+  precision<-cf$byClass[,5]
+  df<-data.frame(class=rownames(cf$byClass),data='high',method=m,precision=precision,recall=recall)
+  df_full<-rbind(df_full,df)
+}
+
+
+for (i in seq_along(methods)) {
+  m<-methods[i]
+  data_ch=chr_low[[m]]
+  ref_ch=chr_low[['gt']]
+  data_fac<-factor(data_ch,union(data_ch,ref_ch))
+  ref_fac<-factor(ref_ch,union(data_ch,ref_ch))
+  cf<-confusionMatrix(data=data_fac,reference=ref_fac)
+  recall<-cf$byClass[,6]
+  precision<-cf$byClass[,5]
+  df<-data.frame(class=rownames(cf$byClass),data='low',method=m,precision=precision,recall=recall)
+  df_full<-rbind(df_full,df)
+}
+
+df_full<-df_full[!is.na(df_full$recall),]
+df_full$class<-gsub("Class: ","",df_full$class)
+## barplot
+ggbarplot(df_full,x='method',y='recall', add = c("mean_se", "jitter"),color="data",position=position_dodge())
+ggbarplot(df_full,x='method',y='precision', add = c("mean_se", "jitter"),color="data",position=position_dodge())
+
+````
+
+````{r fig.height=5,fig.width=12}
+rec<-ggboxplot(df_full,x='method',y='recall', add = c("mean_se", "jitter"),color="data",,repel=TRUE)
+prec<-ggboxplot(df_full,x='method',y='precision', add = c("mean_se", "jitter"),color="data",,repel=TRUE)
+
+ggpar(prec,legend.title = "data quality",ylim = c(0,1)) + ggpar(rec,legend.title="data quality",ylim = c(0,1))
+
+````
+````{r}
+total_nneg<-c()
+total_acc<-c()
+total_nnegpc<-c()
+chr_low$demuxsnp<-sce$knn_jacc
+methods=c("htodemux","bff_cluster","bff_raw","gmm_demux","demuxmix","demuxsnp")
+for (i in seq_along(methods)) {
+  m<-methods[i]
+  data_ch=chr_low[[m]]
+  ref_ch=chr_low$gt
+  nneg<-sum(data_ch=="Negative")
+  acc<-sum(data_ch==ref_ch)/length(data_ch)
+  print(nneg)
+  print(acc)
+  total_nneg[i]<-nneg
+  total_nnegpc[i]<-nneg/length(ref_ch)
+  total_acc[i]<-acc
+}
+names(total_nneg)<-methods
+names(total_nnegpc)<-methods
+names(total_acc)<-methods
+df_methods_low<-data.frame(method=methods,pc_neg=total_nnegpc,accuracy=total_acc)
+df_methods_low$data<-"low"
+
+for (i in seq_along(methods)) {
+  m<-methods[i]
+  data_ch=chr[[m]]
+  ref_ch=chr$gt
+  nneg<-sum(data_ch=="Negative")
+  acc<-sum(data_ch==ref_ch)/length(data_ch)
+  print(nneg)
+  print(acc)
+  total_nneg[i]<-nneg
+  total_nnegpc[i]<-nneg/length(ref_ch)
+  total_acc[i]<-acc
+}
+names(total_nneg)<-methods
+names(total_nnegpc)<-methods
+names(total_acc)<-methods
+
+df_methods_high<-data.frame(method=methods,pc_neg=total_nnegpc,accuracy=total_acc)
+df_methods_high$data="high"
+df_methods<-rbind(df_methods_high,df_methods_low)
+ggbarplot(df_methods,x='method',y='accuracy',fill = 'data',position=position_dodge(),color = 'data',title='Overall Classificaton Accuracy between methods and high/low quality hashing',xlab='method',ylab='Overall CLassification Accuracy')+ylim(0,1)
+ggbarplot(df_methods,x='method',y='pc_neg',fill = 'data',position=position_dodge(),color = 'data' ,title='% Negatives assigned between methods and high/low quality hashing',xlab='method',ylab='% hashing negatives')
+````
+
+````{r}
+
+load("/data/projects/demuxSNP/nextflow/ccrcc_out/demuxSNP_h/h_final_sce.rdata")
+
+sig_full<-counts(altExp(sce,"sig"))
+hto_full<-counts(altExp(sce,"HTO_old"))
+shift<-c(2,1,1,1,10,1)
+hto_shift<-shift*hto_full
+hto_full[sig_full]<-round(hto_shift[sig_full])
+
+hto2<-as.matrix(hto_full)
+plot_hashtag(data.frame(t(log(hto_full+1))))
+hto_align<-SingleCellExperiment(list(counts=hto_full))
+altExp(sce,"HTO_align")<-hto_align
+
+seurat<-as.Seurat(sce)
+
+````
+
+
+````{r}
+
+sce<-high_conf_calls(sce,assay="HTO_old",pacpt = 0.9)
+
+````
