--- a/vignettes/hashtag_sim_test.Rmd
+++ b/vignettes/hashtag_sim_test.Rmd
@@ -233,20 +233,44 @@ for (i in seq_along(c(methods2))) {
 
 ````{r fig.height=2.5,fig.width=3.5}
 set.seed(3)
-dfa<-data.frame(x=rnorm(4,mean=0.95,sd=0.05),y=rnorm(4,mean=0.05,sd=0.05),sample="a")
-dfb<-data.frame(x=rnorm(3,mean=0.05,sd=0.05),y=rnorm(3,mean=0.05,sd=0.05),sample="b")
-dfc<-data.frame(x=rnorm(5,mean=0.95,sd=0.05),y=rnorm(5,mean=0.95,sd=0.05),sample="c")
-df_tot<-rbind(dfa,dfb,dfc)
+dfa<-data.frame(x=rnorm(5,mean=0.95,sd=0.05),y=rnorm(5,mean=0.05,sd=0.05),sample="Hashtag1")
+dfb<-data.frame(x=rnorm(4,mean=0.05,sd=0.05),y=rnorm(4,mean=0.95,sd=0.05),sample="Hashtag2")
+#dfc<-data.frame(x=rnorm(5,mean=0.95,sd=0.05),y=rnorm(5,mean=0.95,sd=0.05),sample="c")
+df_tot<-rbind(dfa,dfb)
 df_tot$sample[9]<-"uncertain"
-gg<-ggpar(ggscatter(df_tot,x="x",y="y",color = "sample",palette=c("blue","red","black","orange"),label='sample',repel = TRUE),xlab="SNP1",ylab="SNP2")
+gg<-ggpar(ggscatter(df_tot,x="x",y="y",color = "sample",palette=c(dittoColors()[1:2],"black"),label='sample',repel = TRUE),xlab="SNP1",ylab="SNP2")
 gg+rremove('legend') + scale_y_continuous(breaks=2,limits=c(0,1)) + scale_x_continuous(breaks=2,limits=c(0,1))
+
+
+
+
 ````
 
 ````{r}
 
+draw_counts<-function(size_sig,size_bg,mu_sig,mu_bg,mat,seed=NULL) {
+set.seed(seed)
+counts_sig<-t(mapply(rnbinom,n=dim(mat)[2],size=size_sig,mu=mu_sig)) #signal counts
+counts_bg<-t(mapply(rnbinom,n=dim(mat)[2],size=size_bg,mu=mu_bg))  #background counts
 
+merged<-matrix(0,nrow=dim(mat)[1],ncol=dim(mat)[2])
+dim(merged)==dim(mat);dim(merged)==dim(counts_sig)
+merged[mat==TRUE]<-counts_sig[mat==TRUE]
+merged[mat==FALSE]<-counts_bg[mat==FALSE]
+
+colnames(merged)<-colnames(mat)
+rownames(merged)<-paste(rep("Hashtag",dim(mat)[1]),seq_len(dim(mat)[1]),sep="")
+return(merged)
+}
 
 ````
+
+````{r}
+
+counts<-draw_counts()
+
+````
+
 
 ````{r}
 
@@ -260,23 +284,66 @@ hist(tot,breaks=15)
 ````{r fig.width=12,fig.height=3}
 source("../R/hto_sim.R")
 source("../R/plot_hashtag.R")
-mat<-logimat(6,nsinglet=rep(1000,6), ndoub = 1500, nneg=500)
-size_sig=rep(1,6)
-size_bg=rep(1,6)
-mu_sig=rep(1500,6)
-mu_bg=rep(10,6)
-counts<-draw_counts(size_sig = size_sig, size_bg = size_bg, mu_sig = mu_sig, mu_bg = mu_bg, mat = mat, seed = 1)
 
-dim(counts)
-truth<-colnames(counts)
-df<-data.frame(t(log(counts+1)))
-plot<-plot_hashtag(df)
-do.call(grid.arrange,c(plot,nrow=1))
 ````
 
+````{r fig.height=4, fig.width=5.5}
+
+mat<-logimat(2,c(800,800),0,0)
+
+size_sig=rep(3.5,2)
+size_bg=rep(7,7)
+mu_sig=c(1400,600)
+mu_bg=c(110,120)
+params<-c(size_sig,size_bg,mu_sig,mu_bg)
+counts<-draw_counts(size_sig = size_sig, size_bg = size_bg, mu_sig = mu_sig, mu_bg = mu_bg, mat = mat)
+
+library(Seurat)
+norm<-NormalizeData(counts,normalization.method="CLR")
+p<-plot_hashtag(as.data.frame(t(norm)),ylim=c(0,350),xlim=c(0,3))
+
+p[[1]] / p[[2]]
+
+
+````
+
+
 ````{r}
+hto <- t(counts)[,1]
+mu1 <- 1400
+mu2 <- 110
+theta1 <- 5
+theta2 <- 5
+pi <- c(1,1)
+quantile = 0.95
+binwidth = 50
 
+    xlab <- c("HTO counts")
+ 
 
+    comp1 <- function(x) {
+        return(dnbinom(round(x), mu = mu1, size = theta1) * pi[1])
+    }
+    comp2 <- function(x) {
+        return(dnbinom(round(x), mu = mu2, size = theta2) * pi[2])
+    }
+    mixture <- function(x) {
+        return(comp1(x) + comp2(x))
+    }
 
+    xmax <- max(
+        qnbinom(quantile, mu = mu1, size = theta1),
+        qnbinom(quantile, mu = mu2, size = theta2)
+    )
+df <- data.frame(hto = hto)
 
+p <- ggplot(df, aes(x = hto)) +
+        geom_histogram(aes(y = after_stat(density)), alpha = 0.4, binwidth = binwidth) +
+  #stat_function(fun = mixture, lwd = 1, n = xmax, col = "black") +
+  stat_function(fun = comp1, lwd = 1, n = xmax, col = "dodgerblue") +
+  stat_function(fun = comp2, lwd = 1, n = xmax, col = "firebrick2") +
+  xlab(xlab) +
+  ylab("Density") +
+  coord_cartesian(xlim = c(0, xmax))
+p
 ````
